# BomberMan

./: .gitignore  CMakeLists.txt  FreshBuild.cmd  FreshBuild.sh  OldCMake.txt  install.sh
Bomberman/: Bomberman.cpp
include/: AudioManager.hpp  Clock.hpp  ConfigEditor.hpp  Entity.hpp  GLUIElement.hpp  GUI.hpp  GUIRenderer.hpp  GameManager.hpp  GameObjectRenderInfo.hpp  MenuFunction.hpp  MenuStateMachine.hpp  Mesh.hpp  RenderEngine.hpp  RenderObject.hpp  Setting.hpp  Settings.hpp  StateMachine.hpp  StateObject.hpp  UIElement.hpp  UIGroup.hpp  Util.hpp  Vec3.hpp  main.hpp
include/CEGUI/: Config.h
include/components/: BaseComponent.hpp  Bomb.hpp  Collision.hpp  Enemy.hpp  Explosion.hpp  Movement.hpp  PlayerController.hpp  PlayerData.hpp  Position.hpp  Powerup.hpp  Render.hpp  Tag.hpp
include/systems/: BombSystem.hpp  CollisionSystem.hpp  MovementSystem.hpp  PlayerControllerSystem.hpp  RenderSystem.hpp  TagSystem.hpp
libs/SDL2/include/: SDL_main.h
libs/Windows/Assimp/lib/: IrrXML.lib  assimp-vc140-mt.exp  assimp.lib  zlibstaticd.lib
libs/Windows/cegui/: CEGUIBase-0.exp  CEGUIBase-0.lib  CEGUIBase-0_d.lib  CEGUICommonDialogs-0.exp  CEGUICommonDialogs-0.lib  CEGUICommonDialogs-0_Static.lib  CEGUICommonDialogs-0_d.lib  CEGUICoreWindowRendererSet.exp  CEGUICoreWindowRendererSet.lib  CEGUICoreWindowRendererSet_Static.lib  CEGUICoreWindowRendererSet_d.lib  CEGUIExpatParser.exp  CEGUIExpatParser.lib  CEGUIExpatParser_Static.lib  CEGUIExpatParser_d.lib  CEGUIOpenGLRenderer-0.exp  CEGUIOpenGLRenderer-0.lib  CEGUIOpenGLRenderer-0_Static.lib  CEGUIOpenGLRenderer-0_d.lib  CEGUISILLYImageCodec.exp  CEGUISILLYImageCodec.lib  CEGUISILLYImageCodec_Static.lib  CEGUISILLYImageCodec_d.lib
libs/darwin/cegui/: libCEGUIBase-0.dylib  libCEGUICommonDialogs-0.dylib  libCEGUICoreWindowRendererSet.dylib  libCEGUIExpatParser.dylib  libCEGUIMinesweeper.dylib  libCEGUIOpenGLRenderer-0.dylib  libCEGUISILLYImageCodec.dylib  libSILLY.dylib  libSILLY_d.dylib  libexpat.dylib  libexpat_d.dylib  libfreetype.2.7.1.dylib  libfreetype.2.7.dylib  libfreetype.dylib  libfreetype_d.2.7.1.dylib  libfreetype_d.2.7.dylib  libfreetype_d.dylib  libglew.dylib  libglew_d.dylib  libglfw.dylib  libglfw_d.dylib  libjpeg.dylib  libjpeg_d.dylib  libpcre.dylib  libpcre_d.dylib  libpng.dylib  libpng_d.dylib  libzlib.dylib  libzlib_d.dylib
resources/: settings.cfg
resources/GUI/: BomberGUI.project
resources/GUI/fonts/: Caveman.font  FasterOne.font  FasterOneSmall.font  FasterOneTiny.font
resources/GUI/imagesets/: BombermanSettings.imageset  Bomberman_1.imageset  GameOverlay.imageset  SampleBrowser.imageset
resources/GUI/layouts/: GameOverlay.layout  MainMenu.layout  MenuLayout.xml  Settings.layout  TestLayout.layout
resources/GUI/looknfeel/: AlfiskoSkin.looknfeel  Bomberman.looknfeel  Bombermanskin.looknfeel
resources/GUI/schemes/: AlfiskoSkin.scheme  Bomberman.scheme
shaders/: fragment.glsl  gui2D_fragment.glsl  gui2D_vertex.glsl  particleFragment.glsl  particleVertex.glsl  transparentFragment.glsl  vertex.glsl
targsrc/: AudioManager.cpp  AudioThread.cpp  Clock.cpp  ConfigEditor.cpp  DrawGUI.cpp  Entity.cpp  Events.cpp  GUI.cpp  GUIRenderer.cpp  GameManager.cpp  GameObjectRenderInfo.cpp  InjectInput.cpp  Keybindings.cpp  LoadImage.cpp  MenuStateMachine.cpp  Mesh.cpp  PaneGroup.cpp  RenderEngine.cpp  RenderObject.cpp  Setting.cpp  Settings.hpp  StateObject.cpp  UIElement.cpp  Util.cpp  VBOIndexer.cpp  Vec3.cpp  main.cpp
targsrc/components/: BaseComponent.cpp  Bomb.cpp  Collision.cpp  Enemy.cpp  Explosion.cpp  Movement.cpp  PlayerController.cpp  PlayerData.cpp  Position.cpp  Powerup.cpp  Render.cpp  Tag.cpp
targsrc/systems/: BombSystem.cpp  CollisionSystem.cpp  MovementSystem.cpp  PlayerControllerSystem.cpp  RenderSystem.cpp  TagSystem.cpp
textures/: BombAO.dds  DwarfAO.dds  GoblinAO.dds  Meat.dds  barrel.dds  caveWall.dds  closed_door_AO.dds  crate.dds  fire.dds  open_door_AO.dds  stone.dds
